# gtars

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Changes.md  LICENSE.txt  Makefile  README.md  RELEASING.md  optimization.py  test.gtokp  test_generated_config.yaml
bbcache/: Cargo.toml
bbcache/src/: client.rs  lib.rs  utils.rs
bindings/: Cargo.toml  README.md  pyproject.toml  test.gtok
bindings/R/: README.md
bindings/genimtools/: __init__.py  __init__.pyi  uniwig.pyi  vocab.pyi
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/r/: .RData  .Rhistory  DESCRIPTION  LICENSE.md  NAMESPACE  README.md  test.gtok
bindings/src/: consts.rs  functions.rs  lib.rs
bindings/wasm/: .dockerignore  Cargo.toml  README.md  build.Dockerfile
fragsplit/: Cargo.toml
fragsplit/src/: consts.rs  map.rs  split.rs
genimtools/: Cargo.toml
genimtools/docs/: changelog.md
genimtools/src/: lib.rs  main.rs
genimtools/tests/: test.rs
gtars-bbcache/: Cargo.toml
gtars-bbcache/src/: client.rs  consts.rs  lib.rs  utils.rs
gtars-bm25/: Cargo.toml  README.md
gtars-bm25/src/: bm25.rs  lib.rs  sparse_vector.rs
gtars-bm25/tests/: demo_bm25_enrichment.py  demo_qdrant_enrichment.py
gtars-cli/: Cargo.toml
gtars-cli/src/: main.rs  scatrs.rs
gtars-cli/tests/: refget_build_memory.rs
gtars-core/: Cargo.toml
gtars-core/src/: consts.rs  errors.rs  lib.rs  utils.rs
gtars-gd/: Cargo.toml
gtars-gd/src/: lib.rs  models.rs  statistics.rs  utils.rs
gtars-genomicdist/: Cargo.toml
gtars-genomicdist/examples/: bench_load.rs  benchmark_interval_ranges.rs  interval_ranges_demo.rs
gtars-genomicdist/src/: asset.rs  bed_classifier.rs  consensus.rs  errors.rs  interval_ranges.rs  lib.rs  models.rs  partitions.rs  region_set_list_ops.rs  signal.rs  statistics.rs  stranded_region_set.rs  utils.rs
gtars-genomicdist/tests/: closest_divergence_demo.rs
gtars-igd/: Cargo.toml
gtars-igd/src/: README.md  create.rs  igd.rs  igdbloom.rs  lib.rs
gtars-io/: Cargo.toml
gtars-io/src/: bed.rs  bigbed.rs  error.rs  gtok.rs  lib.rs
gtars-lola/: Cargo.toml
gtars-lola/src/: database.rs  enrichment.rs  errors.rs  lib.rs  models.rs  output.rs  universe.rs
gtars-node/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrapper.d.ts  wrapper.js
gtars-node/__test__/: index.test.mjs  streaming.test.mjs
gtars-node/gtars-node-backup/: Cargo.toml  package-lock.json
gtars-node/src/: lib.rs
gtars-overlaprs/: Cargo.toml
gtars-overlaprs/src/: ailist.rs  bits.rs  error.rs  genome_index.rs  indexed_region_set.rs  lib.rs  multi_chrom_overlapper.rs  regionset_ops.rs  traits.rs
gtars-perf/: Cargo.toml  README.md
gtars-perf/perf/: .gitignore
gtars-perf/src/: machine.rs  main.rs  tasks.rs
gtars-py/: Cargo.toml  pyproject.toml
gtars-py/src/: lib.rs
gtars-python/: Cargo.toml  README.md  demo_remote_store.py  pyproject.toml
gtars-python/src/: lib.rs
gtars-python/tests/: audit_hgvs_ast_loss.py  test_collection_api.py  test_genomicdist.py  test_hgvs.py  test_hgvs_bridge.py  test_lola.py  test_refget.py  test_reftx.py  test_regionset.py  test_regionsetlist.py  test_tokenizers.py
gtars-refget/: Cargo.toml
gtars-refget/benches/: lookup.rs
gtars-refget/examples/: bench_extract.rs  bench_fasta.rs  perf_task.rs
gtars-refget/src/: alias.rs  alphabet.rs  collection.rs  digest.rs  encoder.rs  fasta.rs  fhr_metadata.rs  hashkeyable.rs  inputs.rs  lib.rs  posread.rs  seqcol.rs  store.rs  utils.rs
gtars-refget/tests/: audit_stream_sequence_truncation.rs  test_decode.rs  transcripts_in_memory.rs  transcripts_integration.rs  transcripts_synthetic_mapper.rs
gtars-reftx/: Cargo.toml
gtars-reftx/benches/: lookup.rs
gtars-reftx/src/: builder.rs  lib.rs  mapper.rs  models.rs  provider.rs  store.rs
gtars-reftx/tests/: README.md  integration.rs  test_hgvs_corpus_mapper.rs  test_synthetic_mapper.rs
gtars-rgvcf/: Cargo.toml
gtars-rgvcf/src/: lib.rs  reader.rs
gtars-rgvcf/tests/: roundtrip_tiny.rs
gtars-sc/: .gitignore  Cargo.toml
gtars-sc/src/: lib.rs  types.rs
gtars-sc/tests/: downstream_integration.rs  edge_cases.rs  pbmc3k_smoketest.rs  rna_integration.rs
gtars-scatrs/: Cargo.toml
gtars-scatrs/src/: README.md  chr_frag_reader.rs  chr_frag_writer.rs  cli.rs  consts.rs  fragment_reader.rs  fragment_writer.rs  io.rs  lib.rs  models.rs  staging.rs  tests.rs
gtars-scoring/: Cargo.toml
gtars-scoring/src/: consts.rs  counts.rs  files.rs  fragment_scoring.rs  lib.rs  matrix_market.rs  scoring_modes.rs
gtars-tokenizers/: Cargo.toml
gtars-tokenizers/src/: config.rs  error.rs  lib.rs  tokenizer.rs
gtars-uniwig/: Cargo.toml
gtars-uniwig/src/: bam_header.rs  bamqc.rs  counting.rs  lib.rs  reading.rs  stream.rs  utils.rs  writing.rs
gtars-uniwig/tests/: audit_bamqc.rs  bamqc_integration.rs  bamqc_tournament.sh  lenient_header.rs
gtars-vrs/: Cargo.toml
gtars-vrs/benches/: bench_encoded.rs  bench_store.rs  gnomad_vrs_parallel_encoded.rs  hgvs_bench.rs  hgvs_vrs_bench.rs
gtars-vrs/examples/: bench_encoded.rs  bench_store.rs  gnomad_vrs.py  gnomad_vrs.rs  gnomad_vrs_parallel_encoded.rs  gnomad_vrs_store.rs  gnomad_vrs_store_rgvcf.rs  gnomad_vrs_store_serial.rs  hgvs_bench.rs  hgvs_vrs_bench.rs  rgvcf_vrs_probe.rs  sha512_backend_probe.rs  transcript_vrs_from_genome.rs
gtars-vrs/src/: digest.rs  lib.rs  models.rs  normalize.rs  provider.rs  rgvcf_input.rs  vcf.rs  vcf_core.rs
gtars-vrs/tests/: audit_gene_symbol_blocklist.rs  audit_vcf_ref_no_validation.rs  hgvs_bridge.rs  hgvs_corpus_mapper.rs  hgvs_parser.rs  hgvs_synthetic.rs  test_external_corpus.rs  test_hgvs_corpus_mapper.rs  test_hgvs_corpus_parser.rs  test_hgvs_parser.rs  test_hgvs_readonly_wasm_equiv.rs  test_hgvs_synthetic.rs  test_hgvs_synthetic_equiv.rs  test_hgvs_to_vrs_bridge.rs  test_parallel_bgzf_encoded.rs  test_parallel_encoded.rs  test_vrs_2_1_validation.rs  test_vrs_compliance.rs  test_vrs_e2e.rs  test_vrs_parallel.rs  vcf_parallel_equiv.rs  vrs_compliance.rs  vrs_e2e.rs
gtars-wasm/: Cargo.toml  README.md  build.Dockerfile
gtars-wasm/js/: remote-refget-store.d.ts  (+1 more)
(+927 files in other folders)
