[workspace]
resolver = "3"
members = [
    "gtars-cli",
    "gtars-python",
    "gtars-genomicdist",
    "gtars-wasm",
    "gtars-r/src/rust",
    "gtars-core",
    "gtars-refget",
    "gtars-uniwig",
    "gtars-overlaprs",
    "gtars-tokenizers",
    "gtars-io",
    "gtars-bbcache",
    "gtars-igd",
    "gtars-fragsplit",
    "gtars-scoring",
    "gtars",
]

[workspace.dependencies]
anyhow = "1.0.82"
thiserror = "2.0.12"
fxhash = "0.2.1"
serde = { version = "1.0.203", features=["derive"] }
flate2 = "1.1.2"
indicatif = "0.18.0"
serde_json = "1.0.135"
byteorder = "1.5.0"
