[workspace]
resolver = "3"
members = [
    "gtars-cli",
    "gtars-python",
    "gtars-genomicdist",
    "gtars-wasm",
    "gtars-r/src/rust",
    "gtars-core",
    "gtars-refget",
    "gtars-uniwig",
    "gtars-overlaprs",
    "gtars-tokenizers",
    "gtars-io",
    "gtars-bbcache",
    "gtars-igd",
    "gtars-fragsplit",
    "gtars-scoring",
    "gtars-sc",
    "gtars",
]

[workspace.dependencies]
anyhow = "1.0.82"
thiserror = "2.0.12"
fxhash = "0.2.1"
serde = { version = "1.0.203", features=["derive"] }
flate2 = "1.1.2"
indicatif = "0.18.0"
serde_json = "1.0.135"
bincode = "1.3.3"
byteorder = "1.5.0"
sprs = "0.11"
ndarray = "0.15.6"
faer = "0.24"
rayon = "1.11.0"
rand = "0.9"
serde_yaml = "0.9"
toml = "0.8"
schemars = "0.8"
arrow = { version = "55", default-features = false, features = ["prettyprint"] }
parquet = { version = "55", default-features = false, features = ["arrow", "snap", "zstd"] }
