[workspace]
resolver = "3"
members = [
    "gtars-cli",
    "gtars-python",
    "gtars-genomicdist",
    "gtars-wasm",
    "gtars-r/src/rust",
    "gtars-core",
    "gtars-refget",
    "gtars-uniwig",
    "gtars-overlaprs",
    "gtars-tokenizers",
    "gtars-io",
    "gtars-bbcache",
    "gtars-igd",
    "gtars-lola",
    "gtars-fragsplit",
    "gtars-scoring",
    "gtars-vrs",
    "gtars",
    "gtars-node",
]

[workspace.dependencies]
anyhow = "1.0.82"
base64-url = "3.0"
thiserror = "2.0.12"
fxhash = "0.2.1"
serde = { version = "1.0.203", features=["derive"] }
flate2 = "1.1.2"
indicatif = "0.18.0"
serde_json = "1.0.135"
bincode = "1.3.3"
byteorder = "1.5.0"
csv = "1.3"
rstest = "0.21"
glob = "0.3"
ureq = "3.1.4"

[profile.dev]
# Keep backtraces (file/line) but drop full debuginfo — cuts target/ bloat ~50-70%
debug = "line-tables-only"
