[package]
name = "bbcache"
version = "0.1.0"
edition = "2024"

[dependencies]
biocrs = { git = "https://github.com/khoroshevskyi/biocfilecachers.git" }
reqwest = { version = "0.12.15", features = ["blocking"] }
shellexpand = "3"
tabled = "0.20.0"
dirs = "6.0.0"

# shared workspace dependencies
anyhow = { workspace = true }
serde_json = { workspace = true }

# our code
gtars-core = { path = "../gtars-core" }