[package]
name = "genimtools-py"
version = "0.0.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "genimtools"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.82"
genimtools = { path = "../genimtools" }
pyo3 = { version = "0.20.0", features=["anyhow"] }
