[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "genimtools"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python" # necessary to distract maturin from the stub files
module-name = "my_project._lib_name"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}


