[package]
name = "fragsplit"
version = "0.5.0"
edition = "2024"
description = "Small utility that wil split fragments files according to pseudobulk assignments"
license = "MIT"
repository = "https://github.com/databio/gtars"

[dependencies]
# shared workspace dependencies
anyhow = { workspace = true }
flate2 = { workspace = true }
indicatif = { workspace = true }

# our code
gtars-core = { path = "../gtars-core", version="0.5.0" }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
tempfile = "3.21.0"
