[package]
name = "genimtools"
version = "0.0.7"
edition = "2021"
description = "Performance-critical tools to manipulate, analyze, and process genomic interval data. Primarily focused on building tools for geniml - our genomic machine learning python package."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
indicatif = "0.17.7"
polars = "0.35.4"
rust-lapper = "1.1.0"

[dev-dependencies]
rstest = "0.18.2"
tempfile = "3.8.1"
