[package]
name = "genimtools"
version = "0.0.11"
edition = "2021"
description = "Performance-critical tools to manipulate, analyze, and process genomic interval data. Primarily focused on building tools for geniml - our genomic machine learning python package."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
clap = { version = "4.4.7", features = ["derive"] }
dirs = "5.0.1"
flate2 = "1.0.28"
glob = "0.3.1"
indicatif = "0.17.7"
# polars = { version = "0.35.4", features = ["decompress", "decompress-fast", "ndarray"] }
rust-lapper = "1.1.0"
walkdir = "2.4.0"

[dev-dependencies]
rstest = "0.18.2"
tempfile = "3.8.1"
