[package]
name = "gtars-bbcache"
version = "0.5.3"
edition = "2024"
description = "Rust implementation of bbcache: a caching system for BED files on bedbase.org"
license = "MIT"
repository = "https://github.com/databio/gtars"

[dependencies]
biocrs = "0.1.0"
ureq = "3.1.4"
shellexpand = "3"
tabled = "0.20.0"
dirs = "6.0.0"

# shared workspace dependencies
anyhow = { workspace = true }
serde_json = { workspace = true }

# our code
gtars-core = { path = "../gtars-core", version="0.5.5" }

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.23.0"