[package]
name = "gtars-cli"
version = "0.5.0"
edition = "2024"
description = "Performance critical tools for genomic interval analysis. This is the CLI"
homepage = "https://github.com/databio/gtars"
repository = "https://github.com/databio/gtars"
readme = "../README.md"
license = "MIT"
categories = ["science::bioinformatics::genomics", "science::bioinformatics"]

[dependencies]
# generic cli stuff
clap = { version = "4.4.7", features = ["derive"] }

# shared workspace dependencies
indicatif = { workspace = true }
fxhash = { workspace = true }
anyhow = { workspace = true }

# our code
gtars-scoring = { path = "../gtars-scoring", optional=true, version="0.5.0" }
gtars-fragsplit = { path = "../gtars-fragsplit", optional=true, version="0.5.0" }
gtars-igd = { path = "../gtars-igd", optional=true, version="0.5.0" }
gtars-uniwig = { path = "../gtars-uniwig", optional=true, version="0.5.0" }
gtars-overlaprs = { path = "../gtars-overlaprs", optional = true, version="0.5.0" }
gtars-bbcache = { path = "../gtars-bbcache", optional=true, version="0.5.0" }

[[bin]]
name = "gtars"
path = "src/main.rs"

[features]
default = []
scoring = ["dep:gtars-scoring"]
uniwig = ["dep:gtars-uniwig"]
bbcache = ["dep:gtars-bbcache"]
igd = ["dep:gtars-igd"]
fragsplit = ["dep:gtars-fragsplit"]
overlaprs = ["dep:gtars-overlaprs"]
