[package]
name = "gtars-cli"
version = "0.9.0"
edition = "2024"
description = "Performance critical tools for genomic interval analysis. This is the CLI"
homepage = "https://github.com/databio/gtars"
repository = "https://github.com/databio/gtars"
readme = "../README.md"
license = "MIT"
categories = ["science::bioinformatics::genomics", "science::bioinformatics"]

[dependencies]
# generic cli stuff
clap = { version = "4.4.7", features = ["derive"] }

# shared workspace dependencies
indicatif = { workspace = true }
fxhash = { workspace = true }
anyhow = { workspace = true }

# our code
gtars-scoring = { path = "../gtars-scoring", optional=true, version="0.5.1" }
gtars-fragsplit = { path = "../gtars-fragsplit", optional=true, version="0.5.0" }
gtars-igd = { path = "../gtars-igd", optional=true, version="0.5.1" }
gtars-uniwig = { path = "../gtars-uniwig", optional=true, version="0.9.0" }
gtars-overlaprs = { path = "../gtars-overlaprs", optional = true, version="0.6.0" }
gtars-bbcache = { path = "../gtars-bbcache", optional=true, version="0.5.4" }
gtars-genomicdist = { path = "../gtars-genomicdist", optional=true, version="0.8.0" }
gtars-refget = { path = "../gtars-refget", optional=true, version="0.9.0" }
gtars-core = { path = "../gtars-core", version="0.5.5", features=["bigbed", "http"] }

# Force SQLite (pulled transitively via gtars-bbcache -> diesel) to compile
# from bundled source so the build doesn't require a system sqlite3 library.
# Without this, the Windows release build fails: LNK1181 cannot open sqlite3.lib.
# Version must match the libsqlite3-sys diesel resolves to for feature unification.
libsqlite3-sys = { version = "0.35", features = ["bundled"], optional = true }

# serialization
serde = { workspace = true }
serde_json = "1"
bincode = { workspace = true }

[[bin]]
name = "gtars"
path = "src/main.rs"

[features]
default = ["scoring", "uniwig", "bbcache", "igd", "fragsplit", "overlaprs", "genomicdist", "refget"]
scoring = ["dep:gtars-scoring"]
uniwig = ["dep:gtars-uniwig"]
bbcache = ["dep:gtars-bbcache", "dep:libsqlite3-sys"]
igd = ["dep:gtars-igd"]
fragsplit = ["dep:gtars-fragsplit"]
overlaprs = ["dep:gtars-overlaprs"]
genomicdist = ["dep:gtars-genomicdist"]
refget = ["dep:gtars-refget"]
