[package]
name = "gtars-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bigtools = "0.5.6"
md-5 = "0.10.6"
num-traits = "0.2.19"
reqwest = { version = "0.12.23", features = ["blocking"] }
tokio = "1.47.1"

anyhow = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
tempfile = "3.21.0"
