[package]
name = "gtars-core"
version = "0.5.3"
edition = "2021"
description = "Core library for gtars: tools for high performance genomic interval analysis"
license = "MIT"
repository = "https://github.com/databio/gtars"

[dependencies]
md-5 = "0.10.6"
num-traits = "0.2.19"
ureq = {version = "3.1.4", optional=true}
tokio = "1.47.1"
bigtools = { version = "0.5.6", optional = true }
polars = {version = "0.51.0", optional = true, default-features = false, features = ["csv"] }

anyhow = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
tempfile = "3.21.0"

[features]
default = []
bigbed = ["dep:bigtools"]
http = ["dep:ureq"]
dataframe = ["dep:polars"]