[package]
name = "gtars-gd"
version = "0.5.0"
edition = "2024"
description = "Impementation of selected function of GenomicDistributions R package in Rust"
license = "MIT"
repository = "https://github.com/databio/gtars"

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking"], optional=true }
bigtools = { version = "0.5.6", optional = true }

# shared workspace dependencies
anyhow = { workspace = true }
serde_json = { workspace = true }

# our code
gtars-core = { path = "../gtars-core", version="0.5.0" }
gtars-tokenizers = { path = "../gtars-tokenizers", version="0.5.0" }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
tempfile = "3.21.0"

[features]
default = []
bigbed = ["dep:bigtools"]
http = ["dep:reqwest"]