[package]
name = "gtars-gd"
version = "0.5.1"
edition = "2021"
description = "Core library for gtars: tools for high performance genomic interval analysis"
license = "MIT"
repository = "https://github.com/databio/gtars"

[dependencies]
gtars-core = { path = "../gtars-core", version="0.5.0" }
gtars-overlaprs = { path = "../gtars-overlaprs", version="0.5.0" }


[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"

#[features]
#default = []
#bigbed = ["dep:bigtools"]
#http = ["dep:reqwest"]