[package]
name = "gtars-genomicdist"
version = "0.5.3"
edition = "2024"
description = "Rust port of GenomicDistributions: tools for computing statistics for genomic interval sets"
license = "MIT"
repository = "https://github.com/databio/gtars"

[dependencies]
gtars-core = { path = "../gtars-core", version="0.5.5" }
gtars-overlaprs = { path = "../gtars-overlaprs", version="0.5.1" }
flate2 = { workspace = true }
polars = { version = "0.51.0", optional = true, default-features = false }
regex = "1.11.1"
thiserror = { workspace = true }
serde = { workspace = true }
bio = "3.0.0"


[dev-dependencies]
pretty_assertions = "1.4.1"
rand = "0.8"
rstest = "0.26.1"
tempfile = "3"

[features]
default = []
bedclassifier = ["dep:polars", "gtars-core/dataframe"]
