[package]
name = "gtars-igd"
version = "0.5.1"
edition = "2024"
description = "Rust implementation of IGD: a high-performance genomic interval search tool"
license = "MIT"
repository = "https://github.com/databio/gtars"

[dependencies]
byteorder.workspace = true
# our code
gtars-core = { path = "../gtars-core", version="0.5.0" }

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.23.0"


# shared workspace dependencies
anyhow = { workspace = true }
