[package]
name = "gtars-igd"
version = "0.5.1"
edition = "2024"
description = "Rust implementation of IGD: a high-performance genomic interval search tool"
license = "MIT"
repository = "https://github.com/databio/gtars"

[dependencies]
byteorder.workspace = true
anyhow.workspace = true
# our code
gtars-core = { path = "../gtars-core", version="0.5.2" }
gtars-overlaprs ={ path = "../gtars-overlaprs", version="0.5.1", optional = true}
bloomfilter = { version = "3.0.1", optional = true}

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.23.0"
pretty_assertions = "1.4.1"

[features]
# Feature 'bloom' links to the dependency key 'bloom' (which is the correct crate name).
bloom = ["dep:bloomfilter", "dep:gtars-overlaprs"]
