[package]
name = "gtars-io"
version = "0.5.0"
edition = "2024"
description = "Small, io focused crate for gtars"
license = "MIT"
repository = "https://github.com/databio/gtars"

[dependencies]
thiserror = { workspace = true }
flate2 = { workspace = true }

# our code
gtars-core = { path = "../gtars-core", version = "0.5.1" }