[package]
name = "gtars-io"
version = "0.5.0"
edition = "2024"
description = "Small, io focused crate for gtars"
license = "MIT"
repository = "https://github.com/databio/gtars"

[dependencies]
# workspace level dependencies
thiserror = { workspace = true }
flate2 = { workspace = true }

# more
bigtools = { version = "0.5.6", optional = true }
tokio = { version = "1.47.1", optional = true }

# our code
gtars-core = { path = "../gtars-core", version = "0.5.1" }

[features]
bigbed = ["dep:bigtools", "dep:tokio"]