[package]
name = "gtars-lola"
version = "0.2.0"
edition = "2024"
description = "LOLA (Locus Overlap Analysis) for genomic region enrichment testing"
license = "MIT"
repository = "https://github.com/databio/gtars"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
gtars-core = { path = "../gtars-core", version = "0.5.2" }
gtars-igd = { path = "../gtars-igd", version = "0.5.1" }
gtars-genomicdist = { path = "../gtars-genomicdist" }
statrs = "0.18"

[dev-dependencies]
tempfile = "3.23.0"
