[package]
name = "gtars-napi"
version = "0.7.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
anyhow = { workspace = true }
serde_json = { workspace = true }
gtars-refget = { path = "../gtars-refget" }

[build-dependencies]
napi-build = "2"
