[package]
name = "gtars-perf"
version = "0.1.0"
edition = "2021"
publish = false
description = "Occasionally-run performance regression harness for gtars (encode/extract/VRS)."

[[bin]]
name = "gtars-perf"
path = "src/main.rs"

[dependencies]
gtars-refget = { path = "../gtars-refget" }
gtars-vrs = { path = "../gtars-vrs" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
clap = { version = "4.4.7", features = ["derive"] }
