[package]
name = "gtars-py"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gtars"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
pyo3 = { version = "0.21", features=["anyhow", "extension-module"] }

# our code
gtars-core = { path = "../gtars-core" }
refget = { path = "../refget" }
tokenizers = { path = "../tokenizers", features = ["huggingface"]}
io = { path = "../io" }