[package]
name = "gtars-py"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gtars"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
pyo3 = { version = "0.21.1", features=["anyhow", "extension-module"] }

# our code
gtars-core = { path = "../gtars-core" }
gtars-refget = { path = "../gtars-refget" }
gtars-gtokenizers = { path = "../gtars-tokenizers", features = ["huggingface"] }
gtars-io = { path = "../gtars-io" }
