[package]
name = "gtars-py"
version = "0.8.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gtars"
crate-type = ["cdylib"]

[features]
default = ["refget", "tokenizers", "genomic_distributions", "models", "utils", "lola"]
refget = ["dep:gtars-refget"]
tokenizers = ["dep:gtars-tokenizers", "dep:gtars-core"]
genomic_distributions = ["dep:gtars-genomicdist"]
models = ["dep:gtars-core", "dep:gtars-genomicdist", "dep:gtars-overlaprs"]
utils = ["dep:gtars-core", "dep:gtars-io"]
lola = ["dep:gtars-lola", "dep:gtars-igd", "dep:gtars-core"]

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
pyo3 = { version = "0.27.1", features=["anyhow", "extension-module"] }
openssl = { version = "0.10", features = ["vendored"] }

# our code (optional, behind feature flags)
gtars-core = { path = "../gtars-core", features=["bigbed", "http"], optional = true }
gtars-genomicdist = { path = "../gtars-genomicdist", optional = true }
gtars-refget = { path = "../gtars-refget", optional = true }
gtars-tokenizers = { path = "../gtars-tokenizers", features = ["huggingface"], optional = true }
gtars-io = { path = "../gtars-io", optional = true }
gtars-igd = { path = "../gtars-igd", optional = true }
gtars-lola = { path = "../gtars-lola", optional = true }
gtars-overlaprs = { path = "../gtars-overlaprs", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }
