[package]
name = "gtars-refget"
version = "0.7.0"
edition = "2024"
description = "Rust implementation of the refget standard for accessing reference sequences"
license = "MIT"
repository = "https://github.com/databio/gtars"

[features]
default = ["filesystem", "http"]
filesystem = ["memmap2", "gtars-core"]  # File-based operations (not WASM-compatible)
http = ["ureq"]  # HTTP client for remote fetching (not WASM-compatible)

[dependencies]
seq_io = "0.3.2"
sha2 = "0.10.7"
md-5 = "0.10.5"
base64-url = "2.0.0"
memmap2 = { version = "0.5", optional = true }  # for memory-mapped file I/O
chrono = { version = "0.4", features = ["serde"] }  # For timestamps
ureq = { version = "2.10", optional = true }  # Lightweight HTTP for remote fetching

# shared workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
flate2 = { workspace = true }
serde_json = { workspace = true }

# our code
gtars-core = { path = "../gtars-core", version="0.5.0", optional = true }

[dev-dependencies]
tempfile = "3.8.1"