[package]
name = "gtars-refget"
version = "0.9.0"
edition = "2024"
description = "Rust implementation of the refget standard for accessing reference sequences"
license = "MIT"
repository = "https://github.com/databio/gtars"

[features]
default = ["filesystem", "http"]
# File-based operations (not WASM-compatible). Also pulls in the native transcript
# mmap backend (`memmap2`), used only when `transcripts` is also on.
filesystem = ["gtars-core", "crossbeam-channel", "glob", "memmap2", "tempfile"]
http = ["ureq"]  # HTTP client for remote fetching (not WASM-compatible)
# WASM-SAFE CORE: in-memory transcript store + HGVS coordinate mapper. No mmap,
# no std::fs on the read path. Enabling `transcripts` alone (the WASM config)
# compiles the core; `transcripts` + `filesystem` (native) additionally compiles
# the mmap backend, the (future) pread seam, and the file-writing builder.
transcripts = []

[dependencies]
sha2 = "0.10.7"
md-5 = "0.10.5"
base64-url = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }  # For timestamps
ureq = { workspace = true, optional = true }  # Lightweight HTTP for remote fetching
crossbeam-channel = { version = "0.5", optional = true }  # Bounded channels for pipeline
glob = { workspace = true, optional = true }  # Glob expansion for FASTA inputs (filesystem-only)
indexmap = "2"  # Order-preserving HashMap for name_lookup
memmap2 = { version = "0.9", optional = true }  # native-only transcript mmap backend (via `filesystem`)
tempfile = { version = "3.8.1", optional = true }  # native-only atomic .reftx publish (via `filesystem`)
thiserror = { workspace = true }                  # transcript mapper error types

# shared workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
flate2 = { workspace = true }
serde_json = { workspace = true }

# our code
gtars-core = { path = "../gtars-core", version="0.5.0", optional = true }

[dev-dependencies]
tempfile = "3.8.1"
peak_alloc = "0.3"
criterion = "0.5"          # transcript lookup benchmark
csv = { workspace = true }  # synthetic transcript mapper test
sha2 = "0.10.7"             # synthetic chrom digest in transcript tests

[[bench]]
name = "lookup"
harness = false
required-features = ["transcripts", "filesystem"]

# FASTA/filesystem-based integration test and examples: only built when the
# `filesystem` feature is enabled (they import FASTA / open on-disk stores).
[[test]]
name = "test_decode"
required-features = ["filesystem"]

[[test]]
name = "audit_stream_sequence_truncation"
required-features = ["filesystem"]

[[example]]
name = "bench_fasta"
required-features = ["filesystem"]

[[example]]
name = "bench_extract"
required-features = ["filesystem"]

[[example]]
name = "perf_task"
required-features = ["filesystem"]