[package]
name = "gtars-rgvcf"
version = "0.1.0"
edition = "2024"
description = "Reader for the rgvcf binary variant format (refget-anchored, sites-only)"
license = "MIT"
repository = "https://github.com/databio/gtars"

[dependencies]
anyhow = { workspace = true }
memmap2 = "0.9"
smallvec = "1.13"

[dev-dependencies]
tempfile = "3.8.1"
